Add testing configuration and update user validation tests
- Added `appsettings.Testing.json` for test-specific settings.
- Changed environment in `App.cs` to "Testing" and registered an in-memory `ApplicationDbContext`.
- Updated `TC.CloudGames.Api.Tests.csproj` to include `Microsoft.EntityFrameworkCore.InMemory`.
- Modified validation error assertions in `UserTests.cs` for flexibility.

--- a/test/TC.CloudGames.Api.Tests/TC.CloudGames.Api.Tests.csproj
+++ b/test/TC.CloudGames.Api.Tests/TC.CloudGames.Api.Tests.csproj
@@ -22,6 +22,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="FastEndpoints.Testing" Version="6.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.5" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.0" />
     <PackageReference Include="Shouldly" Version="4.3.0" />
