--- a/test/TC.CloudGames.BDD.Tests/TC.CloudGames.BDD.Tests.csproj
+++ b/test/TC.CloudGames.BDD.Tests/TC.CloudGames.BDD.Tests.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ardalis.Result" Version="10.1.0" />
+    <PackageReference Include="Ardalis.Result.FluentValidation" Version="10.1.0" />
     <PackageReference Include="AutoFixture.AutoFakeItEasy" Version="4.18.1" />
     <PackageReference Include="Shouldly" Version="4.3.0" />
     <PackageReference Include="FakeItEasy" Version="8.3.0" />
@@ -37,10 +39,6 @@
 
   <ItemGroup>
     <Using Include="Xunit" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="StepDefinitions\Auth\" />
   </ItemGroup>
 
 </Project>
