--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -6,10 +6,32 @@ on:
       - master
 
 jobs:
-  build-and-test:
-    runs-on: ubuntu-latest
 
+  build-app:
+    name: Build Application
+    runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '9.0.x'
+
+      - name: Restore dependencies
+        run: dotnet restore TC.CloudGames.sln
+
+      - name: Build
+        run: dotnet build TC.CloudGames.sln --no-restore --configuration Release
+
+
+  test-unit:
+    name: Run Unit Tests
+    runs-on: ubuntu-latest
+    needs: build-app
+    steps:
+      - uses: actions/checkout@v4
+
       - name: Checkout repository
         uses: actions/checkout@v4
 
