--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -21,8 +21,17 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore TC.CloudGames.sln
 
-      - name: Build
+      - name: Build solution
         run: dotnet build TC.CloudGames.sln --configuration Release
+
+      - name: Publish App Artifacts
+        run: dotnet publish TC.CloudGames.sln --configuration Release --output ./publish
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-build
+          path: ./publish
 
 
   test-unit:
@@ -37,12 +46,17 @@ jobs:
         with:
           dotnet-version: '9.0.x'
 
-      - name: Restore dependencies
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: app-build
+          path: ./publish
+
+      - name: Restore test dependencies
         run: dotnet restore test/TC.CloudGames.Unit.Tests/TC.CloudGames.Unit.Tests.csproj
 
-      - name: Build
+      - name: Build tests
         run: dotnet build test/TC.CloudGames.Unit.Tests/TC.CloudGames.Unit.Tests.csproj --configuration Release
 
-      - name: Run tests
-        run: dotnet test test/TC.CloudGames.Unit.Tests/TC.CloudGames.Unit.Tests.csproj --no-build --configuration Release --collect:"XPlat Code Coverage"
-
+      - name: Run unit tests
+        run: dotnet test test/TC.CloudGames.Unit.Tests/TC.CloudGames.Unit.Tests.csproj --no-build --configuration Release --verbosity normal --collect:"XPlat Code Coverage"
