--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -9,7 +9,7 @@ jobs:
 
   build-app:
     name: Build Application
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
 
@@ -36,7 +36,7 @@ jobs:
 
   test-unit:
     name: Run Unit Tests
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: build-app
     steps:
       - uses: actions/checkout@v4
