--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -7,8 +7,8 @@ on:
 
 jobs:
 
-  build-app:
-    name: Build Application
+  build-and-test:
+    name: Build and Test Solution
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -22,41 +22,7 @@ jobs:
         run: dotnet restore TC.CloudGames.sln
 
       - name: Build solution
-        run: dotnet build TC.CloudGames.sln --configuration Release
-
-      - name: Publish App Artifacts
-        run: dotnet publish TC.CloudGames.sln --configuration Release --output ./publish
-
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-build
-          path: ./publish
-
-
-  test-unit:
-    name: Run Unit Tests
-    runs-on: ubuntu-latest
-    needs: build-app
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '9.0.x'
-
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: app-build
-          path: ./publish
-
-      - name: Restore test dependencies
-        run: dotnet restore test/TC.CloudGames.Unit.Tests/TC.CloudGames.Unit.Tests.csproj
-
-      - name: Build tests
-        run: dotnet build test/TC.CloudGames.Unit.Tests/TC.CloudGames.Unit.Tests.csproj --configuration Release
+        run: dotnet build TC.CloudGames.sln --configuration Release --no-restore
 
       - name: Run unit tests
-        run: dotnet test test/TC.CloudGames.Unit.Tests/TC.CloudGames.Unit.Tests.csproj --no-build --configuration Release --verbosity normal --collect:"XPlat Code Coverage"
+        run: dotnet test TC.CloudGames.sln --configuration Release --no-build --verbosity normal --collect:"XPlat Code Coverage"
