Update to run only unit tests

--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -25,4 +25,4 @@ jobs:
         run: dotnet build TC.CloudGames.sln --configuration Release --no-restore
 
       - name: Run unit tests
-        run: dotnet test TC.CloudGames.sln --configuration Release --no-build --verbosity normal --collect:"XPlat Code Coverage"
+        run: dotnet test test/TC.CloudGames.Unit.Tests/TC.CloudGames.Unit.Tests.csproj --no-build --configuration Release --verbosity normal --collect:"XPlat Code Coverage"
