--- a/test/TC.CloudGames.Unit.Tests/TC.CloudGames.Unit.Tests.csproj
+++ b/test/TC.CloudGames.Unit.Tests/TC.CloudGames.Unit.Tests.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="xunit.runner.json">
+    <Content Include="__xunit.runner.json__">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
