Refactor CI configuration and update container name
Comment out unit test steps in ci.yml for potential refactor.
Update CONTAINER_APP_NAME in managed-DEV-env.yml to
align with naming conventions.

--- a/.github/workflows/managed-DEV-env.yml
+++ b/.github/workflows/managed-DEV-env.yml
@@ -4,7 +4,7 @@ on:
     - feature/phase_02
 env:
   DOTNET_CORE_VERSION: 9.0.x
-  CONTAINER_APP_NAME: tc.cloudgames.api-container-app
+  CONTAINER_APP_NAME: tc-cloudgames-api-container-app
   CONTAINER_APP_ENVIRONMENT_NAME: managed-DEV-env
   RESOURCE_GROUP: managed-DEV-env-rg
   CONTAINER_REGISTRY_NAME: registrydevenv
