Refactor CI workflows for clarity and manual trigger
Updated `ci.yml` for improved formatting and consistency in steps.
Changed deployment workflow name in `managed-DEV-env.yml` to
"Deploy - Dev (Manual Trigger)" and added manual trigger support
with `workflow_dispatch`.

--- a/.github/workflows/managed-DEV-env.yml
+++ b/.github/workflows/managed-DEV-env.yml
@@ -1,9 +1,10 @@
-name: Deploy - Dev
-  
+name: Deploy - Dev (Manual Trigger)
+
 on:
-  push:
-    branches:
-    - feature/phase_02
+  workflow_dispatch: # Habilita botão manual no GitHub Actions
+  # push:
+  #   branches:
+  #   - feature/phase_02
 env:
   DOTNET_CORE_VERSION: 9.0.x
   CONTAINER_APP_NAME: tc-cloudgames-api-container-app
