--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,27 +1,27 @@
 name: CI - Unit Tests (.NET)
 
-# on:
-#   push:
-#     branches: ['**']
+on:
+  push:
+    branches: ['**']
 
-# jobs:
-#   build-and-test:
-#     runs-on: ubuntu-latest
+jobs:
+  build-and-test:
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-#       - name: Setup .NET 9
-#         uses: actions/setup-dotnet@v4
-#         with:
-#           dotnet-version: '9.0.x'
+      - name: Setup .NET 9
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '9.0.x'
 
-#       - name: Restore dependencies
-#         run: dotnet restore TC.CloudGames.sln
+      - name: Restore dependencies
+        run: dotnet restore TC.CloudGames.sln
 
-#       - name: Build
-#         run: dotnet build TC.CloudGames.sln --configuration Release --no-restore
+      - name: Build
+        run: dotnet build TC.CloudGames.sln --configuration Release --no-restore
 
-#       - name: Run unit tests
-#         run: dotnet test test/TC.CloudGames.Unit.Tests/TC.CloudGames.Unit.Tests.csproj --no-build --verbosity normal --configuration Release
+      - name: Run unit tests
+        run: dotnet test test/TC.CloudGames.Unit.Tests/TC.CloudGames.Unit.Tests.csproj --no-build --verbosity normal --configuration Release
