Update CI to trigger only on feature/phase_02 branch
Modified the CI configuration in `ci.yml` to restrict the workflow trigger to pushes on the `feature/phase_02` branch, replacing the previous setting that allowed triggers on all branches.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,10 @@ name: CI - Unit Tests (.NET)
 
 on:
   push:
-    branches: ['**']
+    branches:
+    - feature/phase_02
+  # push:
+  #   branches: ['**']
 
 jobs:
   build-and-test:
