Refactor validation error assertions in GameTests and UserTests for clarity

--- a/test/TC.CloudGames.Unit.Tests/TC.CloudGames.Unit.Tests.csproj
+++ b/test/TC.CloudGames.Unit.Tests/TC.CloudGames.Unit.Tests.csproj
@@ -5,9 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="__xunit.runner.json__">
+    <None Include="xunit.runner.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
