--- a/test/TC.CloudGames.Unit.Tests/TC.CloudGames.Unit.Tests.csproj
+++ b/test/TC.CloudGames.Unit.Tests/TC.CloudGames.Unit.Tests.csproj
@@ -5,9 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="xunit.runner.json">
+    <None Remove="xunit.runner.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="xunit.runner.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
