Update package versions and enhance code quality
- Bump Entity Framework Core and related packages to 9.0.6.
- Upgrade FastEndpoints to version 6.2.0 for new features.
- Add SonarAnalyzer.CSharp 10.12.0.118525 for improved code analysis.
- Update test-related packages for better testing capabilities.
- Adjust unit tests for explicit nullability handling and array syntax.
- Comment out specific validation checks in user tests.
- Update Z.EntityFramework.Plus.EFCore to 9.103.9.1.
- Align Microsoft.Extensions packages with EF Core updates.

--- a/src/TC.CloudGames.Api/TC.CloudGames.Api.csproj
+++ b/src/TC.CloudGames.Api/TC.CloudGames.Api.csproj
@@ -12,14 +12,14 @@
         <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="9.0.0" />
         <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="9.0.0" />
         <PackageReference Include="Bogus" Version="35.6.3" />
-        <PackageReference Include="FastEndpoints" Version="6.1.0" />
-        <PackageReference Include="FastEndpoints.Swagger" Version="6.1.0" />
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.5">
+        <PackageReference Include="FastEndpoints" Version="6.2.0" />
+        <PackageReference Include="FastEndpoints.Swagger" Version="6.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.6" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.5">
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.6">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
@@ -39,6 +39,10 @@
       <Content Include="..\..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Update="SonarAnalyzer.CSharp" Version="10.12.0.118525" />
     </ItemGroup>
 
 
