--- a/src/TC.CloudGames.Domain/TC.CloudGames.Domain.csproj
+++ b/src/TC.CloudGames.Domain/TC.CloudGames.Domain.csproj
@@ -3,11 +3,15 @@
   <ItemGroup>
     <PackageReference Include="Ardalis.Result" Version="10.1.0" />
     <PackageReference Include="Ardalis.Result.FluentValidation" Version="10.1.0" />
-    <PackageReference Include="FastEndpoints.Messaging.Core" Version="6.1.0" />
+    <PackageReference Include="FastEndpoints.Messaging.Core" Version="6.2.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TC.CloudGames.Infra.CrossCutting.Commons\TC.CloudGames.Infra.CrossCutting.Commons.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="SonarAnalyzer.CSharp" Version="10.12.0.118525" />
   </ItemGroup>
 
 </Project>
