Improve CI status check logic
Updated the logic for determining CI checks to specifically verify if the latest commit SHA matches any of the workflow runs. This change enhances the accuracy of the CI status by ensuring it reflects the most recent commit.

--- a/.github/workflows/managed-DEV-env.yml
+++ b/.github/workflows/managed-DEV-env.yml
@@ -32,7 +32,8 @@ jobs:
               branch: context.ref.replace('refs/heads/', ''),
               status: 'success'
             });
-            const ciPassed = runs.data.workflow_runs.length > 0;
+            const latestSha = context.sha;
+            const ciPassed = runs.data.workflow_runs.some(run => run.head_sha === latestSha);
             core.setOutput('ci_passed', ciPassed);
 
   BuildAndDeployContainerApp:
