Enable push event for feature/phase_02 branch
Updated `managed-DEV-env.yml` to uncomment the `push` event, allowing automatic deployment when changes are pushed to the `feature/phase_02` branch. The `workflow_dispatch` event remains commented.

--- a/.github/workflows/managed-DEV-env.yml
+++ b/.github/workflows/managed-DEV-env.yml
@@ -1,10 +1,10 @@
 name: Deploy - Dev (Manual Trigger)
 
 on:
-  workflow_dispatch: # Habilita botão manual no GitHub Actions
-  # push:
-  #   branches:
-  #   - feature/phase_02
+  #workflow_dispatch: # Habilita botão manual no GitHub Actions
+  push:
+    branches:
+    - feature/phase_02
 
 env:
   DOTNET_CORE_VERSION: 9.0.x
