--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -1,28 +1,28 @@
 name: TC CloudGames - Build and Test PR
 
-on:
-  pull_request:
-    branches:
-      - master
+# on:
+#   pull_request:
+#     branches:
+#       - master
 
-jobs:
+# jobs:
 
-  build-and-test:
-    name: Build and Test Solution
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
+#   build-and-test:
+#     name: Build and Test Solution
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v4
 
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '9.0.x'
+#       - name: Setup .NET
+#         uses: actions/setup-dotnet@v4
+#         with:
+#           dotnet-version: '9.0.x'
 
-      - name: Restore dependencies
-        run: dotnet restore TC.CloudGames.sln
+#       - name: Restore dependencies
+#         run: dotnet restore TC.CloudGames.sln
 
-      - name: Build solution
-        run: dotnet build TC.CloudGames.sln --configuration Release --no-restore
+#       - name: Build solution
+#         run: dotnet build TC.CloudGames.sln --configuration Release --no-restore
 
-      # - name: Run unit tests
-      #   run: dotnet test test/TC.CloudGames.Unit.Tests/TC.CloudGames.Unit.Tests.csproj --no-build --configuration Release --verbosity normal --collect:"XPlat Code Coverage"
+#       # - name: Run unit tests
+#       #   run: dotnet test test/TC.CloudGames.Unit.Tests/TC.CloudGames.Unit.Tests.csproj --no-build --configuration Release --verbosity normal --collect:"XPlat Code Coverage"
