--- a/.github/workflows/managedEnvironment-tccloudgamesrg-ad64.yml
+++ b/.github/workflows/managedEnvironment-tccloudgamesrg-ad64.yml
@@ -28,8 +28,8 @@ jobs:
       with:
         appSourcePath: ${{ github.workspace }}
         acrName: ${{ env.CONTAINER_REGISTRY_NAME }}
-        acrUsername: ${{ secrets.tccloudgamesregistry_USERNAME_A23E }}
-        acrPassword: ${{ secrets.tccloudgamesregistry_PASSWORD_A23E }}
+        acrUsername: ${{ secrets.REGISTRY_USERNAME }}
+        acrPassword: ${{ secrets.REGISTRY_PASSWORD }}
         imageToBuild: ${{ env.CONTAINER_REGISTRY_LOGIN_SERVER }}/${{ env.CONTAINER_APP_NAME }}:${{ github.sha }}
         containerAppName: ${{ env.CONTAINER_APP_NAME }}
         containerAppEnvironment: ${{ env.CONTAINER_APP_ENVIRONMENT_NAME }}
