--- a/.github/workflows/managedEnvironment-tccloudgamesrg-ad64.yml
+++ b/.github/workflows/managedEnvironment-tccloudgamesrg-ad64.yml
@@ -4,7 +4,7 @@ on:
     - feature/phase_02
 env:
   DOTNET_CORE_VERSION: 9.0.x
-  CONTAINER_APP_NAME: tc.cloudgames.api-container-app
+  CONTAINER_APP_NAME: tc-cloudgames-api-container-app
   CONTAINER_APP_ENVIRONMENT_NAME: managedEnvironment-tccloudgamesrg-ad64
   RESOURCE_GROUP: tc-cloudgames-rg
   CONTAINER_REGISTRY_NAME: tccloudgamesregistry
