--- a/.github/workflows/managedEnvironment-tccloudgamesrg-ad64.yml
+++ b/.github/workflows/managedEnvironment-tccloudgamesrg-ad64.yml
@@ -4,7 +4,7 @@ on:
     - feature/phase_02
 env:
   DOTNET_CORE_VERSION: 9.0.x
-  CONTAINER_APP_NAME: tc-cloudgames-api-container-app
+  CONTAINER_APP_NAME: tc.cloudgames.api-container-app
   CONTAINER_APP_ENVIRONMENT_NAME: managedEnvironment-tccloudgamesrg-ad64
   RESOURCE_GROUP: tc-cloudgames-rg
   CONTAINER_REGISTRY_NAME: tccloudgamesregistry
@@ -28,8 +28,8 @@ jobs:
       with:
         appSourcePath: ${{ github.workspace }}
         acrName: ${{ env.CONTAINER_REGISTRY_NAME }}
-        acrUsername: ${{ secrets.REGISTRY_USERNAME }}
-        acrPassword: ${{ secrets.REGISTRY_PASSWORD }}
+        acrUsername: ${{ secrets.tccloudgamesregistry_USERNAME_A23E }}
+        acrPassword: ${{ secrets.tccloudgamesregistry_PASSWORD_A23E }}
         imageToBuild: ${{ env.CONTAINER_REGISTRY_LOGIN_SERVER }}/${{ env.CONTAINER_APP_NAME }}:${{ github.sha }}
         containerAppName: ${{ env.CONTAINER_APP_NAME }}
         containerAppEnvironment: ${{ env.CONTAINER_APP_ENVIRONMENT_NAME }}
