Update Docker build command in workflow
Specify Dockerfile path for building image in deploy_workflow.yml to ensure the correct Dockerfile is used. This change is crucial for projects with multiple Dockerfiles and maintains the tagging and pushing of the image to the container registry.

--- a/.github/workflows/deploy_workflow.yml
+++ b/.github/workflows/deploy_workflow.yml
@@ -36,7 +36,7 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        docker build -t $CONTAINER_REGISTRY_LOGIN_SERVER/$CONTAINER_APP_NAME:latest .
+        docker build -f ./src/TC.CloudGames.Api/Dockerfile -t $CONTAINER_REGISTRY_LOGIN_SERVER/$CONTAINER_APP_NAME:latest ./src/TC.CloudGames.Api
         docker push $CONTAINER_REGISTRY_LOGIN_SERVER/$CONTAINER_APP_NAME:latest
 
     - name: Deploy to Azure Container Apps
