--- a/.github/workflows/deploy_workflow.yml
+++ b/.github/workflows/deploy_workflow.yml
@@ -36,7 +36,7 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        docker build -f ./src/TC.CloudGames.Api/Dockerfile -t $CONTAINER_REGISTRY_LOGIN_SERVER/$CONTAINER_APP_NAME:latest ./src/TC.CloudGames.Api
+        docker build -f ./src/TC.CloudGames.Api/Dockerfile -t $CONTAINER_REGISTRY_LOGIN_SERVER/$CONTAINER_APP_NAME:latest .
         docker push $CONTAINER_REGISTRY_LOGIN_SERVER/$CONTAINER_APP_NAME:latest
 
     - name: Deploy to Azure Container Apps
