--- a/.github/workflows/deploy_workflow.yml
+++ b/.github/workflows/deploy_workflow.yml
@@ -24,25 +24,32 @@ jobs:
       with:
         dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
 
-    - name: Log in to Azure
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
     - name: Log in to Azure Container Registry
-      run: |
-        echo ${{ secrets.REGISTRY_PASSWORD }} | docker login ${{ env.CONTAINER_REGISTRY_LOGIN_SERVER }} \
-          -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.CONTAINER_REGISTRY_LOGIN_SERVER }}
+        username: ${{ secrets.REGISTRY_USERNAME }}
+        password: ${{ secrets.REGISTRY_PASSWORD }}
 
     - name: Build and push Docker image
       run: |
         docker build -f ./src/TC.CloudGames.Api/Dockerfile -t $CONTAINER_REGISTRY_LOGIN_SERVER/$CONTAINER_APP_NAME:latest .
         docker push $CONTAINER_REGISTRY_LOGIN_SERVER/$CONTAINER_APP_NAME:latest
 
+    - name: Log in to Azure
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
     - name: Deploy to Azure Container Apps
       uses: azure/container-apps-deploy-action@v2
       with:
-        acrName: ${{ env.CONTAINER_REGISTRY_NAME }}}}
-        containerAppName: ${{ env.CONTAINER_APP_NAME }}
-        resourceGroup: ${{ env.RESOURCE_GROUP }}
         imageToDeploy: ${{ env.CONTAINER_REGISTRY_LOGIN_SERVER }}/${{ env.CONTAINER_APP_NAME }}:latest
+        resourceGroup: ${{ env.RESOURCE_GROUP }}
+        containerAppName: ${{ env.CONTAINER_APP_NAME }}
+        acrName: ${{ env.CONTAINER_REGISTRY_NAME }}}}
+        environmentVariables: |
+            ASPNETCORE_ENVIRONMENT=Development
