--- a/.github/workflows/deploy_workflow.yml
+++ b/.github/workflows/deploy_workflow.yml
@@ -1,55 +1,53 @@
-name: Deploy to Azure Container App
+﻿name: 🚀 Build and Deploy to Azure Container Apps
 
 on:
-  workflow_dispatch:
   push:
     branches:
     - feature/phase_02
+  workflow_dispatch:
+
 env:
-  DOTNET_CORE_VERSION: 9.0.x
-  CONTAINER_REGISTRY_NAME: tccloudgamesregistry
-  CONTAINER_REGISTRY_LOGIN_SERVER: tccloudgamesregistry.azurecr.io
-  CONTAINER_APP_NAME: tc-cloudgames-api-container-app  
+  ACR_NAME: tccloudgamesregistry
+  CONTAINER_APP_NAME: tc-cloudgames-api-container-app
   RESOURCE_GROUP: tc-cloudgames-rg
+  IMAGE_TAG: ${{ github.sha }}
+
 jobs:
-  BuildAndDeployContainerApp:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout source code
-      uses: actions/checkout@v4
+      - name: ⏬ Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Setup .NET SDK
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
+      - name: 🔐 Login to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      - name: 🐳 Login to ACR
+        uses: azure/docker-login@v1
+        with:
+          login-server: ${{ env.ACR_NAME }}.azurecr.io
 
-    - name: Log in to Azure Container Registry
-      uses: docker/login-action@v3
-      with:
-        registry: ${{ env.CONTAINER_REGISTRY_LOGIN_SERVER }}
-        username: ${{ secrets.REGISTRY_USERNAME }}
-        password: ${{ secrets.REGISTRY_PASSWORD }}
+      - name: ⚙️ Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-    - name: Build and push Docker image
-      run: |
-        docker build -f ./src/TC.CloudGames.Api/Dockerfile -t $CONTAINER_REGISTRY_LOGIN_SERVER/$CONTAINER_APP_NAME:latest .
-        docker push $CONTAINER_REGISTRY_LOGIN_SERVER/$CONTAINER_APP_NAME:latest
+      - name: ⚙️ Build and push Docker image
+        run: |
+          docker build -f ./src/TC.CloudGames.Api/Dockerfile -t $ACR_NAME.azurecr.io/$CONTAINER_APP_NAME:$IMAGE_TAG .
+          docker push $ACR_NAME.azurecr.io/$CONTAINER_APP_NAME:$IMAGE_TAG
 
-    - name: Log in to Azure
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-    - name: Deploy to Azure Container Apps
-      uses: azure/container-apps-deploy-action@v2
-      with:
-        imageToDeploy: ${{ env.CONTAINER_REGISTRY_LOGIN_SERVER }}/${{ env.CONTAINER_APP_NAME }}:latest
-        resourceGroup: ${{ env.RESOURCE_GROUP }}
-        containerAppName: ${{ env.CONTAINER_APP_NAME }}
-        acrName: ${{ env.CONTAINER_REGISTRY_NAME }}}}
-        environmentVariables: |
-            ASPNETCORE_ENVIRONMENT=Development
+      - name: 🚀 Deploy to Azure Container Apps
+        uses: azure/container-apps-deploy-action@v2
+        with:
+          acrName: ${{ env.ACR_NAME }}
+          containerAppName: ${{ env.CONTAINER_APP_NAME }}
+          resourceGroup: ${{ env.RESOURCE_GROUP }}
+          imageToDeploy: ${{ env.ACR_NAME }}.azurecr.io/${{ env.CONTAINER_APP_NAME }}:${{ env.IMAGE_TAG }}
+          environmentVariables: |
+            ASPNETCORE_ENVIRONMENT=Production
+            
+      - name: 📦 Output deployed image tag
+        run: |
+          echo "Deployed image: $ACR_NAME.azurecr.io/$CONTAINER_APP_NAME:$IMAGE_TAG"
