Add CI status check job to deployment workflow
Introduced a new job `check-ci-status` in `deploy_workflow.yml` that verifies the success of the latest CI workflow (`ci.yml`). This job runs on `ubuntu-latest`, retrieves workflow runs for the current branch, and checks if the latest commit SHA is among the successful runs. The outcome is stored in the `ci_passed` output variable, which is utilized in the `build-and-deploy` job to conditionally execute based on CI success.

--- a/.github/workflows/deploy_workflow.yml
+++ b/.github/workflows/deploy_workflow.yml
@@ -13,7 +13,30 @@ env:
   IMAGE_TAG: ${{ github.sha }}
 
 jobs:
+  check-ci-status:
+    runs-on: ubuntu-latest
+    outputs:
+      ci_passed: ${{ steps.ci-status.outputs.ci_passed }}
+    steps:
+      - name: Check latest CI workflow status
+        id: ci-status
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const runs = await github.rest.actions.listWorkflowRuns({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: 'ci.yml',
+              branch: context.ref.replace('refs/heads/', ''),
+              status: 'success'
+            });
+            const latestSha = context.sha;
+            const ciPassed = runs.data.workflow_runs.some(run => run.head_sha === latestSha);
+            core.setOutput('ci_passed', ciPassed);
+
   build-and-deploy:
+    needs: check-ci-status
+    if: needs.check-ci-status.outputs.ci_passed == 'true'
     runs-on: ubuntu-latest
 
     steps:
