Enhance CI/CD workflows for Azure Container Apps
Updated `ci.yml` to include a `workflow_dispatch` trigger for manual CI runs and commented out the push trigger for `feature/phase_02`.

Significantly improved `ci_cd_deploy_workflow.yml` to add a complete CI and deployment process, including environment variable definitions and steps for building, testing, and deploying a Docker image to Azure Container Apps.

Modified `deploy_workflow.yml` to comment out the push trigger for `feature/phase_02`, aligning with changes in `ci.yml`.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,10 @@
 name: CI - Unit Tests (.NET)
 
 on:
-  push:
-    branches:
-    - feature/phase_02
+  workflow_dispatch:
+  # push:
+  #   branches:
+  #   - feature/phase_02
   # push:
   #   branches: ['**']
 
