--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
 ﻿name: 🧪 CI | Unit Tests (.NET)
 
 on:
+  push:
+    branches:
+    - feature/phase_02
   workflow_dispatch:
-  # push:
-  #   branches:
-  #   - feature/phase_02
   # push:
   #   branches: ['**']
 
