Update CI/CD workflows for feature/phase_02 branch
Modified `ci.yml` and `deploy_workflow.yml` to add comments
indicating that workflows are set to trigger on pushes to the
`feature/phase_02` branch. The original branch specifications
for push events have been commented out, serving as documentation
for future reference.

--- a/.github/workflows/deploy_workflow.yml
+++ b/.github/workflows/deploy_workflow.yml
@@ -1,9 +1,9 @@
 ﻿name: 🚀 CD | Azure Container Apps
 
 on:
-  push:
-    branches:
-    - feature/phase_02
+  # push:
+  #   branches:
+  #   - feature/phase_02
   workflow_dispatch:
 
 env:
