--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
 ﻿name: 🧪 CI | Unit Tests (.NET)
 
 on:
-  push:
-    branches:
-    - feature/phase_02
+  # push:
+  #   branches:
+  #   - feature/phase_02
   workflow_dispatch:
   # push:
   #   branches: ['**']
