Implement Redis caching with CacheProvider and settings
This commit introduces a new caching mechanism using Redis.
A `CacheProvider` class is added to manage cache settings,
along with a `CacheSettings` class to hold configuration values
like Host, Port, Password, and InstanceName. The
`ServiceCollectionExtensions` class is updated to configure
the Redis cache using these settings.

Application settings files are modified to reflect the new
cache configuration structure. A `CacheStringParser` utility
class is introduced to parse the Redis connection string.
Dependency injection is updated to register the `CacheProvider`
as a singleton service, and integration tests are adjusted to
set environment variables for the new cache configuration.

--- a/src/TC.CloudGames.Api/appsettings.Development.json
+++ b/src/TC.CloudGames.Api/appsettings.Development.json
@@ -1,6 +1,9 @@
 {
-  "ConnectionStrings": {
-    "Cache": "tc-cloudgames-redis:6379"
+  "Cache": {
+    "Host": "tc-cloudgames-redis",
+    "Port": "6379",
+    "Password": "",
+    "InstanceName": "TC.CloudGames.Api:"
   },
   "Database": {
     "Host": "localhost",
