--- a/.github/workflows/ci_cd_deploy_workflow.yml
+++ b/.github/workflows/ci_cd_deploy_workflow.yml
@@ -61,6 +61,14 @@ jobs:
           imageToDeploy: ${{ env.ACR_NAME }}.azurecr.io/${{ env.CONTAINER_APP_NAME }}:${{ env.IMAGE_TAG }}
           environmentVariables: |
             ASPNETCORE_ENVIRONMENT=Development
+            DB_HOST=${{ secrets.AZURE_DB_HOST }}
+            DB_PORT=${{ secrets.AZURE_DB_PORT }}
+            DB_NAME=${{ secrets.AZURE_DB_NAME }}
+            DB_USER=${{ secrets.AZURE_DB_USER }}
+            DB_PASSWORD=${{ secrets.AZURE_DB_PASSWORD }}
+            CACHE_HOST=${{ secrets.AZURE_CACHE_HOST }}
+            CACHE_PORT=${{ secrets.AZURE_CACHE_PORT }}
+            CACHE_PASSWORD=${{ secrets.AZURE_CACHE_PASSWORD }}
       - name: 📦 Output deployed image tag
         run: |
           echo "Deployed image: $ACR_NAME.azurecr.io/$CONTAINER_APP_NAME:$IMAGE_TAG"
