Add debug step for Azure Key Vault access
Introduce a new step "Debug Key Vault Access" in the
`ci_cd_deploy_workflow.yml` file to list secrets in the
specified Azure Key Vault using the Azure CLI. This step
is added before the existing step that fetches secrets.

--- a/.github/workflows/ci_cd_deploy_workflow.yml
+++ b/.github/workflows/ci_cd_deploy_workflow.yml
@@ -46,6 +46,9 @@ jobs:
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
+      
+      - name: Debug Key Vault Access
+        run: az keyvault secret list --vault-name $KEYVAULT_NAME
 
       - name: 🔑 Fetch secrets from Azure Key Vault
         uses: azure/get-keyvault-secrets@v1
