Add Key Vault debug step and improve secret upload
This commit introduces a new step in the `ci_cd_deploy_workflow.yml` file for debugging Key Vault access by listing secrets. Additionally, the secret upload command to the Azure Container App has been updated to use double quotes for variable references and to define the `DB_PASSWORD` and `CACHE_PASSWORD` environment variables, enhancing clarity and correctness.

--- a/.github/workflows/ci_cd_deploy_workflow.yml
+++ b/.github/workflows/ci_cd_deploy_workflow.yml
@@ -46,7 +46,7 @@ jobs:
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-      
+
       - name: Debug Key Vault Access
         run: az keyvault secret list --vault-name $KEYVAULT_NAME
 
@@ -64,10 +64,13 @@ jobs:
 
       - name: 💾 Upload Key Vault secrets to Azure Container App
         run: |
+          DB_PASSWORD="${{ env['db-password'] }}"
+          CACHE_PASSWORD="${{ env['cache-password'] }}"
+
           az containerapp secret set \
-            --name $CONTAINER_APP_NAME \
-            --resource-group $RESOURCE_GROUP \
-            --secrets db-password-secret=$DB-PASSWORD cache-password-secret=$CACHE-PASSWORD
+            --name "$CONTAINER_APP_NAME" \
+            --resource-group "$RESOURCE_GROUP" \
+            --secrets db-password-secret="$DB_PASSWORD" cache-password-secret="$CACHE_PASSWORD"
 
       - name: 🐳 Login to ACR
         uses: docker/login-action@v3
