Update environment variable names in CI/CD workflow
Changed `db-password` and `cache-password` to uppercase
`DB-PASSWORD` and `CACHE-PASSWORD` for consistency in
the deployment process of Azure Container App secrets.

--- a/.github/workflows/ci_cd_deploy_workflow.yml
+++ b/.github/workflows/ci_cd_deploy_workflow.yml
@@ -64,8 +64,8 @@ jobs:
 
       - name: 💾 Upload Key Vault secrets to Azure Container App
         run: |
-          DB_PASSWORD="${{ env['db-password'] }}"
-          CACHE_PASSWORD="${{ env['cache-password'] }}"
+          DB_PASSWORD="${{ env['DB-PASSWORD'] }}"
+          CACHE_PASSWORD="${{ env['CACHE-PASSWORD'] }}"
 
           az containerapp secret set \
             --name "$CONTAINER_APP_NAME" \
